--- a/ZZTDotNetCore.SignalRChatApp/Views/Shared/_Layout.cshtml
+++ b/ZZTDotNetCore.SignalRChatApp/Views/Shared/_Layout.cshtml
@@ -20,7 +20,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                                Home
+                                <span class="badge bg-primary" id="count">0</span>
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -49,7 +52,7 @@
         var connection = new signalR.HubConnectionBuilder().withUrl("/chatHub").build();
 
         connection.on("ClientOrderReceiveMessage", function (count) {
-            
+            $('#count').html(count);
         });
 
         connection.start().then(function () {
